[package]
name = "unciv"
description = "Library and tools for reading the Call To Power game data files"
homepage = "https://davidgow.net/hacks/unciv.html"
repository = "https://github.com/sulix/unciv"
license-file = "LICENSE"
version = "0.2.0"
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
set-timestamps = []

[dependencies]
byteorder = "1.3"
png = "0.15"

